# avalanche-ops

./: .dockerignore  .gitignore  .rustfmt.nightly.toml  CODEOWNERS  Cargo.toml  Cross.toml  LICENSE  LICENSE.header  README.md  example-aws.md  recipes-aws.md
avalanche-api/: Cargo.toml
avalanche-api/examples/: avm.rs  c.rs  eth.rs  info.rs  metrics.rs  p.rs  platform.rs  x.rs
avalanche-api/src/: avax.rs  avm.rs  c.rs  eth.rs  health.rs  info.rs  lib.rs  metrics.rs  p.rs  platform.rs  x.rs
avalanche-config/: Cargo.toml  README.md
avalanche-config-installer/: Cargo.toml  README.md
avalanche-config-installer/examples/: download.rs
avalanche-config-installer/src/: github.rs  lib.rs  s3.rs
avalanche-config/src/: main.rs
avalanche-config/src/add_track_subnet/: mod.rs
avalanche-config/src/default/: mod.rs
avalanche-config/src/subnet_config/: mod.rs
avalanche-config/src/subnet_evm/: chain_config.rs  genesis.rs
avalanche-kms/: Cargo.toml  README.md
avalanche-kms/src/: main.rs
avalanche-kms/src/create/: mod.rs
avalanche-kms/src/delete/: mod.rs
avalanche-kms/src/evm_balance/: mod.rs
avalanche-kms/src/evm_transfer_from_hotkey/: mod.rs
avalanche-kms/src/info/: mod.rs
avalanche-ops/: Cargo.toml  README.md
avalanche-ops-aws/: Cargo.toml  example-aws.md  recipes-aws.md
avalanche-ops-aws/cfn-templates/: asg_amd64_ubuntu.yaml
avalanche-ops-aws/src/: lib.rs  main.rs
avalanche-ops-aws/src/apply/: mod.rs
avalanche-ops-aws/src/check_balances/: mod.rs
avalanche-ops-aws/src/default_spec/: mod.rs
avalanche-ops-aws/src/delete/: mod.rs
avalanche-ops-aws/src/events/: mod.rs  update_artifacts.rs
avalanche-ops-aws/src/read_spec/: mod.rs
avalanche-ops/artifacts/: default.metrics.rules.yaml
avalanche-ops/src/: artifacts.rs  dev_machine_artifacts.rs  lib.rs
avalanche-ops/src/aws/: artifacts.rs  spec.rs
avalanche-types/: Cargo.toml  README
avalanche-types/artifacts/: ewoq.key.json  sample.genesis.json  test.insecure.secp256k1.key.infos.json  test.insecure.secp256k1.key.infos.mnemonic.json  test.insecure.secp256k1.key.infos.no.mnemonic.json  test.insecure.secp256k1.keys
avalanche-types/compatibility/: go.mod  go.sum
avalanche-types/compatibility/key-info-gen/: main.go
avalanche-types/compatibility/key-info-load-avax/: main.go
avalanche-types/compatibility/key-info-load-eth/: main.go
avalanche-types/compatibility/key-info-validate/: main.go
avalanche-types/compatibility/key-infos-validate/: main.go
avalanche-types/compatibility/node-id-load/: main.go
avalanche-types/examples/: cert.rs  key_info_gen.rs  key_info_load_avax.rs  key_info_load_eth.rs  key_info_validate.rs  soft_key_info_gen.rs  soft_key_info_load_avax.rs  soft_key_info_load_eth.rs  soft_key_info_validate.rs  soft_key_mnemonic_gen.rs  soft_key_mnemonic_gen_test_data.rs
avalanche-types/scripts/: examples.sh  tests.compatibility.sh
avalanche-types/src/: avax.rs  cert.rs  codec.rs  constants.rs  formatting.rs  ids.rs  key.rs  lib.rs  node.rs  packer.rs  public_key.rs  secp256k1fx.rs  soft_key.rs  units.rs  vm.rs
avalanche-types/src/api/: avm.rs  eth.rs  health.rs  info.rs  mod.rs  platformvm.rs
avalanche-types/src/avm/: export.rs  fx.rs  import.rs  tx.rs
avalanche-types/src/genesis/: coreth.rs  mod.rs
avalanche-types/src/key/: address.rs  cert.rs  hot.rs  mod.rs
avalanche-types/src/metrics/: avalanchego.rs
avalanche-types/src/platformvm/: add_subnet_validator.rs  add_validator.rs  create_chain.rs  create_subnet.rs  export.rs  import.rs  mod.rs
avalanched-aws/: Cargo.toml
avalanched-aws/src/: command.rs  main.rs
avalanched-aws/src/agent/: cloudwatch.rs  mod.rs
avalanched-aws/src/alias_chain/: mod.rs
avalanched-aws/src/backup/: download.rs  mod.rs  upload.rs
avalanched-aws/src/install_artifacts/: mod.rs
avalanched-aws/src/install_chain/: mod.rs
avalanched-aws/src/install_subnet/: mod.rs
avalanched-aws/src/run/: mod.rs
avalanchego/: Cargo.toml
avalanchego/src/: config.rs  genesis.rs
avalancheup-aws/: Cargo.toml  example-aws.md  recipes-aws-advanced.md  recipes-aws.md  static-provisioning.md
avalancheup-aws/cfn-templates/: asg_amd64_ubuntu.yaml  ssm_doc_restart_node_tracked_subnet_xsvm.yaml
avalancheup-aws/src/: README.md  aws.rs  lib.rs  main.rs  spec.rs
aws/: Cargo.toml
aws/examples/: cloudformation_ec2_instance_role.rs  cloudformation_vpc.rs  cloudwatch.rs  ec2_key_pair.rs  kms.rs  s3.rs  sts.rs
aws/scripts/: examples.sh
aws/src/: cloudformation.rs  cloudwatch.rs  ec2.rs  envelope.rs  errors.rs  kms.rs  lib.rs  s3.rs  sts.rs
blizzard-aws/: Cargo.toml
blizzard-aws/src/: cloudwatch.rs  command.rs  evm.rs  flags.rs  main.rs  x.rs
blizzardup-aws/: Cargo.toml  README.md
blizzardup-aws/cfn-templates/: asg_ubuntu.yaml  ec2_instance_role.yaml  vpc.yaml
blizzardup-aws/src/: blizzard.rs  lib.rs  main.rs
certs-manager/: Cargo.toml
certs-manager/examples/: cert-manager.rs
certs-manager/src/: lib.rs
crates/avalanchego/: Cargo.toml  README.md
crates/coreth/: Cargo.toml  README.md
crates/subnet-evm/: Cargo.toml  README.md
dev-machine-aws/: Cargo.toml
dev-machine-aws/cfn-templates/: asg_amd64_al2.yaml  asg_amd64_ubuntu.yaml  asg_arm64_al2.yaml
dev-machine-aws/src/: lib.rs  main.rs
devnet-faucet/: Cargo.toml  README.md
devnet-faucet/src/: README.md  command.rs  flags.rs  main.rs
infra-aws/: Cargo.toml  README.md
infra-aws/artifacts/: default.metrics.filters.yaml
infra-aws/examples/: certs.rs
infra-aws/src/: lib.rs
staking-key-cert-s3-downloader/: Cargo.toml
staking-key-cert-s3-downloader/src/: command.rs  flags.rs  main.rs
staking-signer-key-s3-downloader/: Cargo.toml
staking-signer-key-s3-downloader/src/: command.rs  flags.rs  main.rs
subnet-evm/: Cargo.toml
subnet-evm/src/: config.rs  genesis.rs
subnetctl/: Cargo.toml
subnetctl/src/: main.rs
utils/: Cargo.toml  README
utils/examples/: compress.rs  id.rs  random.rs
utils/scripts/: examples.sh
utils/src/: big_int.rs  cmp.rs  compress.rs  hash.rs  http.rs  humanize.rs  lib.rs  prometheus.rs  random.rs  rfc3339.rs  secp256k1r.rs  time.rs
(+252 files in other folders)
