[package]
name = "avalanche-ops"
version = "0.0.4-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/awslabs/aws-sdk-rust/releases
aws-config = "0.8.0"
aws-sdk-cloudformation = "0.8.0"
aws-sdk-cloudwatchlogs = "0.8.0"
aws-sdk-ec2 = "0.8.0"
aws-sdk-kms = "0.8.0"
aws-sdk-s3 = "0.8.0"
aws-sdk-sts = "0.8.0"
aws-smithy-types = "0.38.0"
bech32 = "0.8.1"
bitcoin = "0.27.1"
bs58 = "0.4.0"
byteorder = "1.4.3"
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
crossterm = "0.23.0"
dialoguer = "0.10.0"
env_logger = "0.9.0"
ethereum-types = "0.13.1"
flate2 = "1.0.22"
fs_extra = "1.2.0"
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.14"
openssl = "0.10.38"
path-clean = "0.1.0"
ring = "0.16.20"
ripemd = "0.1.0"
rust-embed = "6.3.0"
secp256k1 = { version = "0.21.3", features = ["rand-std"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
sha3 = "0.10.1"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
url = "2.2.2"
walkdir = "2.3.2"
whoami = "1.2.1"
zip = "0.5.13"
zstd = "0.10.0"

[dev-dependencies]
tokio-test = "0.4.2"

# ref. https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
[[bin]]
name = "avalanche-ops-nodes-aws"
path = "src/bin/avalanche-ops-nodes-aws/main.rs"

[[bin]]
name = "avalanched-aws"
path = "src/bin/avalanched-aws/main.rs"

[[bin]]
name = "dev-machine"
path = "src/bin/dev-machine/main.rs"
