[package]
name = "avalanche-api"
version = "0.0.1"
edition = "2021"

[dependencies]
avalanche-types = { path = "../avalanche-types" }
aws-sdk-cloudwatch = "0.12.0"
aws-smithy-types = "0.42.0"
chrono = "0.4.19"
log = "0.4.17"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
utils = { path = "../utils" }

[dev-dependencies]
env_logger = "0.9.0"
rust-embed = "6.4.0"
