[package]
name = "avalanche-config-installer"
version = "0.2.48" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.67"
publish = true
description = "avalanche-config installer"
repository = "https://github.com/ava-labs/avalanche-ops"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
aws-manager = { version = "0.24.12", features = ["s3"] } # https://crates.io/crates/aws-manager
compress-manager = "0.0.5"
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93" # https://github.com/serde-rs/json
tokio = "1.25.0" # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
