[package]
name = "avalanche-config"
version = "0.3.0-beta.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.67"

[dependencies]
avalanche-types = { version = "0.0.281", features = ["avalanchego"] } # https://crates.io/crates/avalanche-types
clap = { version = "4.1.8", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
crossterm = "0.26.1"
dialoguer = "0.10.3"
env_logger = "0.10.0"
log = "0.4.17"
random-manager = "0.0.5"
