[package]
name = "avalanche-kms"
version = "0.3.8-beta.4" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.68"

[dependencies]
avalanche-types = { version = "0.0.334", features = ["jsonrpc_client", "wallet", "wallet_evm", "kms_aws"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.25.3", features = ["kms", "sts"] } # https://github.com/gyuho/aws-manager/tags
clap = { version = "4.2.1", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
crossterm = "0.26.1"
dialoguer = "0.10.3"
env_logger = "0.10.0"
ethers-signers = "=2.0.2"
id-manager = "0.0.3"
log = "0.4.17"
primitive-types = "0.12.1" # https://crates.io/crates/primitive-types
tokio = { version = "1.27.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
