[package]
name = "avalanche-ops-aws"
version = "0.0.8-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-api = { path = "../avalanche-api" }
avalanche-types = { path = "../avalanche-types" }
avalanchego = { path = "../avalanchego" }
aws = { path = "../aws" }
aws-sdk-cloudformation = "0.9.0"
aws-sdk-s3 = "0.9.0"
clap = { version = "3.1.8", features = ["cargo", "derive"] }
coreth = { path = "../coreth" }
crossterm = "0.23.2"
dialoguer = "0.10.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
rust-embed = "6.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
signal-hook = "0.3.13"
subnet-evm = { path = "../subnet-evm" }
tokio = { version = "1.17.0", features = ["full"] }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.3.0"
