[package]
name = "avalanche-ops"
version = "0.3.6-alpha.0" # https://crates.io/crates/avalanche-ops
edition = "2021"
rust-version = "1.68"
publish = true
description = "avalanche-ops spec"
repository = "https://github.com/ava-labs/avalanche-ops"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
avalanche-types = { version = "0.0.319", features = ["avalanchego"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.24.28", features = ["ec2", "sts"] } # https://github.com/gyuho/aws-manager/tags
compress-manager = "0.0.6"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
log = "0.4.17"
prefix-manager = "0.0.2"
primitive-types = { version = "0.12.1", features = ["impl-serde"], optional = false } # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.24"
random-manager = "0.0.5"
rust-embed = "6.6.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94" # https://github.com/serde-rs/json/releases
serde_with = { version = "2.3.1", features = ["hex"] }
serde_yaml = "0.9.19" # https://github.com/dtolnay/serde-yaml/releases

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.4.0"
