[package]
name = "avalanche-ops"
version = "1.0.0" # https://crates.io/crates/avalanche-ops
edition = "2021"
rust-version = "1.70"
publish = true
description = "avalanche-ops spec"
repository = "https://github.com/ava-labs/avalanche-ops"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
avalanche-types = { version = "0.1.4", features = ["avalanchego"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.30.2", features = ["ec2", "sts"] } # https://github.com/gyuho/aws-manager/tags
compress-manager = "0.0.10"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
log = "0.4.20"
prefix-manager = "0.0.2"
primitive-types = { version = "0.12.1", features = ["impl-serde"], optional = false } # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.30"
public-ip = "0.2.2"
random-manager = "0.0.5"
rust-embed = "8.0.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.2.0", features = ["hex"] }
serde_yaml = "0.9.25" # https://github.com/dtolnay/serde-yaml/releases

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.8.0"
