[package]
name = "avalanche-types"
version = "0.0.1"
edition = "2021"

[dependencies]
bech32 = "0.8.1"
bip32 = "0.3.0"
bitcoin = "0.27.1"
bytes = "1.1.0"
chrono = "0.4.19"
ethereum-types = "0.13.1"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.16"
num-bigint = "0.4.3"
rand_core = { version = "0.6.3", features = ["std"] }
rcgen = "0.9.2"
ring = "0.16.20"
ripemd = "0.1.1"
rust-embed = "6.3.0"
rustls-pemfile = "0.3.0"
secp256k1 = { version = "0.22.1", features = ["global-context", "rand-std", "recovery"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
sha3 = "0.10.1"
utils = { path = "../utils" }
zerocopy = "0.6.1"

[dev-dependencies]
env_logger = "0.9.0"
tempfile = "3.3.0"
