[package]
name = "avalanche-types"
version = "0.0.1"
edition = "2021"

[dependencies]
bech32 = "0.8.1"
bitcoin = "0.28.0"
bytes = "1.1.0"
chrono = "0.4.19"
ethereum-types = "0.13.1"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.16"
num-bigint = "0.4.3"
rand_core = { version = "0.6.3", features = ["std"] }
rcgen = "0.9.2"
ring = "0.16.20"
ripemd = "0.1.1"
rust-embed = "6.4.0"
rustls-pemfile = "1.0.0"
secp256k1 = { version = "0.22.1", features = ["global-context", "rand-std", "recovery"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_yaml = "0.8.23"
sha3 = "0.10.1"
utils = { path = "../utils" }
zerocopy = "0.6.1"

[dev-dependencies]
env_logger = "0.9.0"
tempfile = "3.3.0"
