[package]
name = "avalanched-aws"
version = "0.8.5" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "avalanched-aws"
path = "src/main.rs"

[dependencies]
avalanche-installer = "0.0.77" # https://crates.io/crates/avalanche-installer
avalanche-ops = { path = "../avalanche-ops" }
avalanche-telemetry-cloudwatch-installer = "0.0.107" # https://crates.io/crates/avalanche-telemetry-cloudwatch-installer
avalanche-types = { version = "0.0.398", features = ["avalanchego", "jsonrpc_client", "subnet_evm"] } # https://crates.io/crates/avalanche-types
aws-ip-provisioner-installer = "0.0.96" # https://crates.io/crates/aws-ip-provisioner-installer
aws-manager = { version = "0.28.68", features = ["autoscaling", "cloudwatch", "ec2", "s3"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudwatch = "0.28.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.28.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.28.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-volume-provisioner-installer = "0.0.121" # https://crates.io/crates/aws-volume-provisioner-installer
clap = { version = "4.3.10", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
command-manager = "0.0.3"
compress-manager = "0.0.10"
env_logger = "0.10.0"
log = "0.4.18"
prometheus-manager = "0.0.30"
random-manager = "0.0.5"
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.5.0"
tokio = { version = "1.29.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = "0.10", features = ["vendored"] }
