[package]
name = "avalancheup-aws"
version = "0.3.6-alpha.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.68"

[[bin]]
name = "avalancheup-aws"
path = "src/main.rs"

[dependencies]
avalanche-ops = { path = "../avalanche-ops" }
avalanche-types = { version = "0.0.319", features = ["avalanchego", "cert", "jsonrpc_client", "wallet", "subnet", "subnet_evm", "kms_aws"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.24.28", features = ["cloudformation", "cloudwatch", "ec2", "s3", "ssm", "sts"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudformation = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ssm = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.1.11", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
compress-manager = "0.0.6"
crossterm = "0.26.1"
dialoguer = "0.10.3"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
log = "0.4.17"
prefix-manager = "0.0.2"
primitive-types = { version = "0.12.1", features = ["impl-serde"], optional = false } # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.24"
random-manager = "0.0.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94" # https://github.com/serde-rs/json/releases
serde_yaml = "0.9.19" # https://github.com/dtolnay/serde-yaml/releases
signal-hook = "0.3.15"
tokio = { version = "1.26.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.4.0"
