[package]
name = "avalancheup-aws"
version = "0.5.1-beta.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.69"

[[bin]]
name = "avalancheup-aws"
path = "src/main.rs"

[dependencies]
avalanche-ops = { path = "../avalanche-ops" }
avalanche-types = { version = "0.0.372", features = ["avalanchego", "jsonrpc_client", "wallet", "subnet", "subnet_evm", "kms_aws"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.26.19", features = ["cloudformation", "cloudwatch", "ec2", "s3", "ssm", "sts"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudformation = "0.26.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.26.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.26.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ssm = "0.26.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.2.4", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
compress-manager = "0.0.8"
crossterm = "0.26.1"
dialoguer = "0.10.4"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
log = "0.4.17"
prefix-manager = "0.0.2"
primitive-types = { version = "0.12.1", features = ["impl-serde"], optional = false } # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.28"
random-manager = "0.0.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json/releases
serde_yaml = "0.9.21" # https://github.com/dtolnay/serde-yaml/releases
signal-hook = "0.3.15"
tokio = { version = "1.28.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.5.0"
