[package]
name = "avalancheup-aws"
version = "1.0.0-alpha.4" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "avalancheup-aws"
path = "src/main.rs"

[dependencies]
avalanche-ops = { path = "../avalanche-ops" }
avalanche-types = { version = "0.1.4", features = ["avalanchego", "jsonrpc_client", "wallet", "subnet", "subnet_evm", "kms_aws"] } # https://crates.io/crates/avalanche-types
aws-dev-machine = "0.0.17"
aws-manager = { version = "0.30.2", features = ["cloudformation", "cloudwatch", "ec2", "s3", "ssm", "sts"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudformation = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.33.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ssm = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.4.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
compress-manager = "0.0.10"
crossterm = "0.27.0"
dialoguer = "0.10.4"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
log = "0.4.20"
prefix-manager = "0.0.2"
primitive-types = { version = "0.12.1", features = ["impl-serde"], optional = false } # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.30"
random-manager = "0.0.5"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105" # https://github.com/serde-rs/json/releases
serde_yaml = "0.9.25" # https://github.com/dtolnay/serde-yaml/releases
signal-hook = "0.3.17"
ssh-scp-manager = "0.0.4"
tokio = { version = "1.32.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.8.0"
