[package]
name = "aws"
version = "0.0.1"
edition = "2021"

[dependencies]
# https://github.com/awslabs/aws-sdk-rust/releases
aws-config = "0.11.0"
aws-sdk-cloudformation = "0.11.0"
aws-sdk-cloudwatch = "0.11.0"
aws-sdk-cloudwatchlogs = "0.11.0"
aws-sdk-ec2 = "0.11.0"
aws-sdk-kms = "0.11.0"
aws-sdk-s3 = "0.11.0"
aws-sdk-sts = "0.11.0"
aws-smithy-types = "0.41.0"
aws-types = "0.11.0"
byteorder = "1.4.3"
chrono = "0.4.19"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1.8"
utils = { path = "../utils" }

[dev-dependencies]
env_logger = "0.9.0"
rust-embed = "6.4.0"
tempfile = "3.3.0"
tokio-test = "0.4.2"
