[package]
name = "blizzard-aws"
version = "1.0.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "blizzard-aws"
path = "src/main.rs"

[dependencies]
avalanche-types = { version = "0.1.4", features = ["jsonrpc_client", "wallet", "wallet_evm"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.30.2", features = ["cloudwatch", "ec2", "s3"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudwatch = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "1.5.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
blizzardup-aws = { path = "../blizzardup-aws" }
clap = { version = "4.4.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
ethers-signers = { version = "=2.0.7", optional = false }
log = "0.4.20"
primitive-types = { version = "0.12.1", optional = false } # https://crates.io/crates/primitive-types
random-manager = "0.0.5"
tokio = { version = "1.32.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
